Fix for bug #46396: select after input confuses session history Moved code that set initial value of text control via the editor from CreateAnonymousContent() to a new method called SetInitialValue(). SetInitialValue() is now called during the frame's first reflow. Added mUseEditor to indicate when it is safe to use the editor to get and set values. r=mjudge@netscape.com